# pagmo2

./: .gitignore  CMakeLists.txt  Makefile  README.md  config.hpp.in  pagmo-config.cmake.in  reflection_test.cpp  reflection_test2  reflection_test2.cpp
.github/workflows/: linux.yml  macos.yml  windows.yml
benchmarks/: CMakeLists.txt
cmake/: find_or_build_cereal.cmake  find_or_build_eigen.cmake  find_or_build_graaf.cmake  find_or_build_gtest.cmake  find_or_build_ipopt.cmake  find_or_build_mpi.cmake  find_or_build_nlopt.cmake  find_or_build_tbb.cmake
doc/sphinx/: install.rst  overview.rst
doc/sphinx/docs/cpp/: cpp_docs.rst  r_policy.rst
doc/sphinx/docs/cpp/islands/: mpi_island.rst
include/pagmo/algorithms/: pso.hpp  pso_gen.hpp
pagmo/: algorithm.hpp  archipelago.cpp  archipelago.hpp  bfe.cpp  bfe.hpp  concepts.hpp  exceptions.hpp  io.hpp  island.cpp  island.hpp  pagmo.hpp  population.cpp  population.hpp  problem.cpp  problem.hpp  r_policy.cpp  r_policy.hpp  reflection.hpp  s11n.hpp  s11n_registrations.cpp  s_policy.cpp  s_policy.hpp  topology.cpp  topology.hpp  type_traits.hpp
pagmo/algorithms/: bee_colony.cpp  bee_colony.hpp  cmaes.cpp  cmaes.hpp  compass_search.cpp  compass_search.hpp  cstrs_self_adaptive.cpp  cstrs_self_adaptive.hpp  de.cpp  de.hpp  de1220.cpp  de1220.hpp  gaco.cpp  gaco.hpp  gwo.cpp  gwo.hpp  ihs.cpp  ihs.hpp  ipopt.cpp  ipopt.hpp  maco.cpp  maco.hpp  mbh.cpp  mbh.hpp  moead.cpp  moead.hpp  moead_gen.cpp  moead_gen.hpp  nlopt.cpp  nlopt.hpp  not_population_based.cpp  not_population_based.hpp  nsga2.cpp  nsga2.hpp  nspso.cpp  nspso.hpp  null_algorithm.cpp  null_algorithm.hpp  pso.cpp  pso.hpp  (+12 more)
pagmo/batch_evaluators/: default_bfe.cpp  default_bfe.hpp  member_bfe.cpp  member_bfe.hpp  thread_bfe.cpp  thread_bfe.hpp
pagmo/detail/: base_sr_policy.cpp  base_sr_policy.hpp  bfe_impl.cpp  custom_comparisons.hpp  eigen_s11n.hpp  gte_getter.cpp  gte_getter.hpp  pagmo.fwd.hpp  prime_numbers.cpp  s11n_wrappers.hpp  support_xeus_cling.hpp  typeid_name_extract.hpp
pagmo/islands/: fork_island.cpp  fork_island.hpp  mpi_island.cpp  mpi_island.hpp  thread_island.cpp  thread_island.hpp
pagmo/problems/: ackley.cpp  ackley.hpp  cec2006.cpp  cec2006.hpp  cec2009.cpp  cec2009.hpp  cec2013.cpp  cec2013.hpp  cec2014.cpp  cec2014.hpp  decompose.cpp  decompose.hpp  dtlz.cpp  dtlz.hpp  golomb_ruler.cpp  golomb_ruler.hpp  griewank.cpp  griewank.hpp  hock_schittkowski_71.cpp  hock_schittkowski_71.hpp  inventory.cpp  inventory.hpp  lennard_jones.cpp  lennard_jones.hpp  luksan_vlcek1.cpp  luksan_vlcek1.hpp  minlp_rastrigin.cpp  minlp_rastrigin.hpp  null_problem.cpp  null_problem.hpp  rastrigin.cpp  rastrigin.hpp  rosenbrock.cpp  rosenbrock.hpp  schwefel.cpp  schwefel.hpp  translate.cpp  translate.hpp  unconstrain.cpp  unconstrain.hpp  (+4 more)
pagmo/r_policies/: fair_replace.cpp  fair_replace.hpp
pagmo/s_policies/: select_best.cpp  select_best.hpp
pagmo/topologies/: base_bgl_topology.cpp  base_bgl_topology.hpp  free_form.cpp  free_form.hpp  fully_connected.cpp  fully_connected.hpp  ring.cpp  ring.hpp  unconnected.cpp  unconnected.hpp
pagmo/utils/: cast.hpp  constrained.cpp  discrepancy.cpp  discrepancy.hpp  generic.cpp  generic.hpp  genetic_operators.cpp  gradients_and_hessians.hpp  hypervolume.cpp  hypervolume.hpp  indirect_iterator.hpp  multi_objective.cpp  multi_objective.hpp
pagmo/utils/hv_algos/: hv_algorithm.cpp  hv_algorithm.hpp  hv_bf_approx.cpp  hv_bf_fpras.cpp  hv_hv2d.cpp  hv_hv3d.cpp  hv_hvwfg.cpp
src/algorithms/: nsga2.cpp  pso.cpp  pso_gen.cpp
tests/: CMakeLists.txt  algorithm.test.cpp  algorithm_type_traits.test.cpp  archipelago.test.cpp  archipelago_torture_test.test.cpp  bfe.test.cpp  io.test.cpp  island.test.cpp  island_torture.test.cpp  migration_torture_test.test.cpp  mpi_island.cpp  pagmo_force_dynamic_init.cpp  population.test.cpp  problem.test.cpp  problem_type_traits.test.cpp  pso.cpp  pso_gen.cpp  r_policy.test.cpp  rng.test.cpp  rng_serialization.test.cpp  s_policy.test.cpp  threading.test.cpp  topology.test.cpp  type_traits.test.cpp
tests/algorithms/: bee_colony.test.cpp  cmaes.test.cpp  compass_search.test.cpp  cstrs_self_adaptive.test.cpp  de.test.cpp  de1220.test.cpp  gaco.test.cpp  gwo.test.cpp  ihs.test.cpp  ipopt.test.cpp  maco.test.cpp  mbh.test.cpp  moead.test.cpp  moead_gen.test.cpp  nlopt.test.cpp  nsga2.test.cpp  nspso.test.cpp  pso.test.cpp  pso_gen.test.cpp  sade.test.cpp  sea.test.cpp  sga.test.cpp  simulated_annealing.test.cpp  xnes.test.cpp
tests/batch_evaluators/: default_bfe.test.cpp  member_bfe.test.cpp  thread_bfe.test.cpp
tests/detail/: base_sr_policy.test.cpp  custom_comparisons.test.cpp  eigen3_serialization.test.cpp
tests/islands/: fork_island.test.cpp  thread_island.test.cpp
tests/problems/: ackley.test.cpp  cec2006.test.cpp  cec2009.test.cpp  cec2013.test.cpp  cec2014.test.cpp  decompose.test.cpp  dtlz.test.cpp  golomb_ruler.test.cpp  griewank.test.cpp  hock_schittkowski_71.test.cpp  inventory.test.cpp  lennard_jones.test.cpp  luksan_vlcek1.test.cpp  minlp_rastrigin.test.cpp  rastrigin.test.cpp  rosenbrock.test.cpp  schwefel.test.cpp  translate.test.cpp  unconstrain.test.cpp  wfg.test.cpp  zdt.test.cpp
tests/r_policies/: fair_replace.test.cpp
tests/s_policies/: select_best.test.cpp
tests/topologies/: base_bgl_topology.test.cpp  free_form.test.cpp  fully_connected.test.cpp  ring.test.cpp  unconnected.test.cpp
tests/utils/: constrained.test.cpp  discrepancy.test.cpp  generic.test.cpp  genetic_operators.test.cpp  gradients_and_hessians.test.cpp  hypervolume.test.cpp  multi_objective.test.cpp
tools/: convert_boost_to_gtest.sh  move_serialization.py  transform_exceptions.py
tutorials/: CMakeLists.txt  mpi_archipelago_example.cpp  mpi_island_example.cpp
